2009-01-22  Kevin B. Kenny  <kennykb@acm.org>

	* unix/tcl.m4: Corrected a typo ($(SHLIB_VERSION) should be
	${SHLIB_VERSION}).
	* unix/configure: Autoconf 2.59
	
2009-01-19  Kevin B. Kenny  <kennykb@acm.org>

	* unix/Makefile.in: Added a CONFIG_INSTALL_DIR parameter so that
	* unix/tcl.m4:      distributors can control where tclConfig.sh goes.
	Made the installation of 'ldAix' conditional
	upon actually being on an AIX system.  Allowed for downstream
	packagers to customize SHLIB_VERSION on BSD-derived systems.
	Thanks to Stuart Cassoff for [Patch 907924].
	* unix/configure: Autoconf 2.59
	
2009-01-14  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkImgPhoto.c: fix for aMSN compatibility [tcl-Bug 2507326]

2009-01-11  George Peter Staplin  <georgeps@users.sourceforge.net>

	* generic/tkEvent.c: Backport a fix from 8.6 for a NULL pointer
	dereference in CreateXIC.

2009-01-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinWm.c: Backported fix for [Bug 1847002] to prevent the
	bypassing of grab restrictions via the taskbar on Windows.

2008-12-22  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.6 TAGGED FOR RELEASE ***

	* tests/embed.test:	Eliminate duplicate test names.

	* changes:	Updates for 8.5.6 release.

2008-12-22  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkWidget.c: Don't crash when 
	application uses nondefault visual [Bug 2264732]
	(Backport from trunk change 2008-11-11)
	* Workaround for [Bug 2207435]
	(Backport from trunk change 2008-10-31).

2008-12-22  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkCanvPs.c (Tk_PostscriptFont,TkCanvPostscriptCmd): Backport
	of font size and reflection fix. [Bug 2107938]

2008-12-22  Alexandre Ferrieux 	<ferrieux@users.sourceforge.net>

	* generic/tkCanvUtil.c: Backport of the Millipeter patch [1813597,
	* generic/tkInt.h:       2218964]
	* generic/tkObj.c:
	* generic/tkText.c:
	
2008-12-21  Don Porter  <dgp@users.sourceforge.net>
