@@ -131,7 +131,7 @@ TkUndoClearStack(
 	    TkUndoSubAtom *sub;
 
 	    sub = elem->apply;
-	    while (sub->next != NULL) {
+	    while (sub != NULL) {
 		TkUndoSubAtom *next = sub->next;
 
 		if (sub->action != NULL) {
@@ -142,7 +142,7 @@ TkUndoClearStack(
 	    }
 
 	    sub = elem->revert;
-	    while (sub->next != NULL) {
+	    while (sub != NULL) {
 		TkUndoSubAtom *next = sub->next;
 
 		if (sub->action != NULL) {
@@ -399,7 +399,7 @@ TkUndoSetDepth(
 	    prevelem = elem;
 	    if (elem->type != TK_UNDO_SEPARATOR) {
 		TkUndoSubAtom *sub = elem->apply;
-		while (sub->next != NULL) {
+		while (sub != NULL) {
 		    TkUndoSubAtom *next = sub->next;
 
 		    if (sub->action != NULL) {
@@ -409,7 +409,7 @@ TkUndoSetDepth(
 		    sub = next;
 		}
 		sub = elem->revert;
-		while (sub->next != NULL) {
+		while (sub != NULL) {
 		    TkUndoSubAtom *next = sub->next;
 
 		    if (sub->action != NULL) {
